# proj4_cs1520

./: INFO_SHEET.txt  Makefile  README.md
backend/my_budget/: Cargo.toml
backend/my_budget/migration/: Cargo.toml
backend/my_budget/migration/src/: lib.rs  m20220101_000001_create_category_table.rs  m20220101_000002_create_purchase_table.rs
backend/my_budget/src/: main.rs
backend/my_budget/src/entities/: category.rs  mod.rs  prelude.rs  purchase.rs
frontend/my-budget-app/: README.md  package-lock.json  package.json
frontend/my-budget-app/src/: App.vue
frontend/my-budget-app/src/assets/: main.css
