[package]
name = "my_budget"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["tracing"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
sea-orm = { version = "1.1.0", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
migration = { path = "./migration" }
axum-macros = "0.5.0"
serde_json = "1.0.140"
